--- a/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
@@ -93,7 +93,7 @@
             <ImageView
                 android:id="@+id/contentSummary"
                 android:layout_width="385dp"
-                android:layout_height="350dp"
+                android:layout_height="400dp"
                 android:layout_below="@+id/imageDonationSummary"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
@@ -110,7 +110,8 @@
         android:layout_marginTop="15dp"
         android:text="Donation Details"
         android:textColor="@color/black"
-        android:textStyle="bold">
+        android:textStyle="bold"
+        android:elevation="5dp">
     </TextView>
 
 <!--    Donation Details-->
@@ -123,7 +124,8 @@
                 android:layout_marginTop="5dp"
                 android:text="Title: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/titleTextView"
@@ -132,7 +134,8 @@
                 android:layout_below="@+id/titleLabel"
                 android:layout_marginLeft="33dp"
                 android:text="Insert Title"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
     <TextView
         android:id="@+id/categoryLabel"
@@ -144,7 +147,8 @@
         android:layout_toRightOf="@+id/titleLabel"
         android:text="Category:"
         android:textColor="#6F6F6F"
-        android:textStyle="bold">
+        android:textStyle="bold"
+        android:elevation="5dp">
     </TextView>
 
             <TextView
@@ -155,7 +159,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/titleTextView"
                 android:text="Insert Category"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/amountNeededLabel"
@@ -165,7 +170,8 @@
                 android:layout_marginLeft="28dp"
                 android:text="Amount Needed:"
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/amountNeededTextView"
@@ -174,7 +180,8 @@
                 android:layout_below="@+id/amountNeededLabel"
                 android:layout_marginLeft="33dp"
                 android:text="Insert Amount"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/descriptionLabel"
@@ -184,16 +191,18 @@
                 android:layout_marginLeft="28dp"
                 android:text="Description:"
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
     <LinearLayout
         android:id="@+id/descriptionLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="120dp"
         android:layout_below="@+id/descriptionLabel"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="#ECECEC"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:elevation="5dp">
 
         <TextView
             android:id="@+id/descriptionTextView"
@@ -206,12 +215,13 @@
             android:background="@null"
             android:gravity="top|left"
             android:inputType="textMultiLine|textCapSentences"
-            android:lines="3"
-            android:maxLines="3"
+            android:lines="5"
+            android:maxLines="5"
             android:minLines="1"
             android:scrollbars="none"
             android:text="Insert Description"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:elevation="5dp"/>
     </LinearLayout>
 
 
@@ -226,7 +236,8 @@
                 android:layout_marginTop="10dp"
                 android:text="Contact Information "
                 android:textColor="@color/black"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
 
             <TextView
@@ -238,7 +249,8 @@
                 android:layout_marginTop="5dp"
                 android:text="Full Name: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/fullNameTextView"
@@ -248,7 +260,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/fullNameLabel"
                 android:text="Insert Full Name"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
 
             <TextView
@@ -260,7 +273,8 @@
                 android:layout_marginTop="5dp"
                 android:text="Email: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/emailTextView"
@@ -270,7 +284,9 @@
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/emailLabel"
                 android:text="Insert Email"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"
+                ></TextView>
 
             <TextView
                 android:id="@+id/phoneNumberLabel"
@@ -281,7 +297,8 @@
                 android:layout_marginTop="5dp"
                 android:text="Phone Number: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/phoneNumberTextView"
@@ -291,7 +308,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/phoneNumberLabel"
                 android:text="Insert Phone Number"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodLabel"
@@ -302,7 +320,8 @@
                 android:layout_marginTop="5dp"
                 android:text="Preferred Contact Method: "
                 android:textColor="#6F6F6F"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold"
+                android:elevation="5dp"></TextView>
 
             <TextView
                 android:id="@+id/contactMethodTextView"
@@ -312,7 +331,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/contactMethodLabel"
                 android:text="Insert Contact Method"
-                android:textColor="@color/black"></TextView>
+                android:textColor="@color/black"
+                android:elevation="5dp"></TextView>
 
 
 <!--    Button Post Now-->
@@ -337,62 +357,10 @@
         </RelativeLayout>
     </ScrollView>
     <!--    nav sa ubos-->
-    <RelativeLayout
+    <fragment
+        android:id="@+id/navBarFragment"
+        android:name="com.intprog.helpinghands.NavBarFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/navBot"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/navbottom" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/navBot"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/notificationsImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bell" />
-
-            <ImageButton
-                android:id="@+id/homeImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/home" />
-
-            <ImageButton
-                android:id="@+id/menuImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/more" />
-        </LinearLayout>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
