--- a/app/src/main/res/layout/activity_unspecialized_posting.xml
+++ b/app/src/main/res/layout/activity_unspecialized_posting.xml
@@ -64,138 +64,143 @@
 
     <ImageButton
         android:id="@+id/uploadImageButton"
-        android:layout_width="280dp"
-        android:layout_height="150dp"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/UnspecializedActivityTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
         android:background="@android:color/transparent"
         android:src="@drawable/unspecialized_createpost_image" />
-
-    <TextView
-        android:id="@+id/ActivityDetails"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/activityDetailsRelativeLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/uploadImageButton"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Activity Details:"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"></TextView>
-
-    <LinearLayout
-        android:id="@+id/below_details"
-        android:layout_width="370dp"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:layout_below="@+id/ActivityDetails"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title: "
-            android:textSize="15sp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"/>
-        <EditText
-            android:id="@+id/titleEditText"
+            android:id="@+id/ActivityDetails"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/bg_radius_ten_gray"
-            android:hint="Enter Title"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:textSize="15sp">
-        </EditText>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/below_details2"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:layout_below="@+id/below_details"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No. of Participants: "
+            android:layout_marginLeft="20dp"
+            android:text="Activity Details:"
+            android:textColor="@color/black"
             android:textSize="15sp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"/>
-        <EditText
-            android:id="@+id/noOfParticipantsEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/bg_radius_ten_gray"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:inputType="number"
-            android:textSize="15dp"
-            android:maxLength="2">
-        </EditText>
-    </LinearLayout>
+            android:textStyle="bold"></TextView>
 
-    <TextView
-        android:id="@+id/activityDescriptionTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/below_details2"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Activity Description:"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="15sp">
-    </TextView>
-
-    <LinearLayout
-        android:id="@+id/activityDescriptionLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_below="@+id/activityDescriptionTextView"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/bg_radius_ten_gray"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/descriptionEditText"
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+        <LinearLayout
+            android:id="@+id/below_details"
+            android:layout_width="370dp"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/ActivityDetails"
             android:layout_marginTop="10dp"
-            android:autoLink="all"
-            android:background="@null"
-            android:gravity="top|left"
-            android:hint="Enter Description"
-            android:inputType="textMultiLine|textCapSentences"
-            android:lines="5"
-            android:maxLines="5"
-            android:minLines="1"
-            android:scrollbars="none"
-            android:textSize="15sp" />
-    </LinearLayout>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title: "
+                android:textSize="15sp"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"/>
+            <EditText
+                android:id="@+id/titleEditText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/bg_radius_ten_gray"
+                android:hint="Enter Title"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:textSize="15sp">
+            </EditText>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/below_details2"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_below="@+id/below_details"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No. of Participants: "
+                android:textSize="15sp"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"/>
+            <EditText
+                android:id="@+id/noOfParticipantsEditText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/bg_radius_ten_gray"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:inputType="number"
+                android:textSize="15dp"
+                android:maxLength="2">
+            </EditText>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/activityDescriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/below_details2"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Activity Description:"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="15sp">
+        </TextView>
+
+        <LinearLayout
+            android:id="@+id/activityDescriptionLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_below="@+id/activityDescriptionTextView"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/bg_radius_ten_gray"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/descriptionEditText"
+                android:layout_width="340dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:autoLink="all"
+                android:background="@null"
+                android:gravity="top|left"
+                android:hint="Enter Description"
+                android:inputType="textMultiLine|textCapSentences"
+                android:lines="5"
+                android:maxLines="5"
+                android:minLines="1"
+                android:scrollbars="none"
+                android:textSize="15sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/continueButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/activityDescriptionLinearLayout"
-        android:layout_marginTop="12dp"
+        android:layout_below="@+id/activityDetailsRelativeLayout"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/btn_continue"
         android:text="Continue"
