--- a/app/src/main/res/layout/activity_unspecialized_selection_item.xml
+++ b/app/src/main/res/layout/activity_unspecialized_selection_item.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activityItemRelativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
     <TextView
         android:id="@+id/ActivityTitleTextView"
         android:layout_width="match_parent"
@@ -25,9 +27,11 @@
             android:layout_height="100dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
             android:background="@android:color/transparent"
             android:clickable="false"
-            android:src="@drawable/unspecialized_createpost_image" />
+            android:src="@drawable/unspecialized_createpost_image"
+            android:scaleType="centerCrop"/>
 
         <Button
             android:id="@+id/viewDetailsButton"
