--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -180,6 +180,7 @@
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:paddingLeft="10dp"
+                android:hint="Tag"
                 android:elevation="3dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
