--- a/app/src/main/res/layout/activity_donation_campaign_status_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_status_page.xml
@@ -46,12 +46,7 @@
     </LinearLayout>
 
 
-
-
-
-
-
-    //content
+<!--    content-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -63,8 +58,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_marginHorizontal="30dp">
 
 
             <TextView
