--- a/app/src/main/res/layout/activity_unspecialized_status.xml
+++ b/app/src/main/res/layout/activity_unspecialized_status.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/navtop"></ImageView>
 
     <LinearLayout
+        android:id="@+id/navTopLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/navTop"
@@ -47,117 +48,129 @@
             </TextView>
         </LinearLayout>
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/UnspecializedActivityTextView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/navTop"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
-        android:text="Unspecialized Activity"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-
-    <ImageButton
-        android:id="@+id/activityImageButton"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:layout_below="@+id/UnspecializedActivityTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:background="@android:color/transparent"
-        android:clickable="false"
-        android:src="@drawable/unspecialized_createpost_image" />
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:layout_below="@+id/activityImageButton"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="50dp"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"/>
-
-
-    <RelativeLayout
-        android:id="@+id/ActivitySummaryLinearLayout"
-        android:layout_width="370dp"
-        android:layout_height="120dp"
-        android:layout_below="@+id/titleTextView"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_radius_ten_gray">
-
-        <TextView
-            android:id="@+id/descriptionTextView"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:autoLink="all"
-            android:background="@null"
-            android:gravity="top|left"
-            android:inputType="textMultiLine|textCapSentences"
-            android:lines="5"
-            android:maxLines="5"
-            android:minLines="1"
-            android:scrollbars="none"
-            android:text="Description"
-            android:textSize="15sp" />
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/noOfParticipantsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. of Participants: "
-        android:layout_below="@id/ActivitySummaryLinearLayout"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="24dp"
-        android:textColor="@color/black"/>
-
-    <TextView
-        android:id="@+id/noOfParticipantsDigitTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ActivitySummaryLinearLayout"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/noOfParticipantsTextView"
-        android:background="@drawable/bg_radius_ten_gray"
-        android:hint=" " />
-    <TextView
-        android:id="@+id/peopleWhoJoinedTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="People who joined: "
-        android:layout_below="@id/noOfParticipantsTextView"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="24dp"
-        android:textColor="@color/black"/>
-
-    <LinearLayout
-        android:layout_width="370dp"
-        android:layout_height="120dp"
-        android:layout_below="@+id/peopleWhoJoinedTextView"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_radius_ten_gray">
-
-        <ListView
-            android:id="@+id/participantsListView"
+        android:layout_height="match_parent"
+        android:layout_below="@id/navTopLinearLayout"
+        android:layout_above="@id/navBot"
+        tools:ignore="NotSibling">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="0dp"
-            android:text="" />
-    </LinearLayout>
+            android:layout_marginHorizontal="10dp">
+            <TextView
+                android:id="@+id/UnspecializedActivityTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="Unspecialized Activity"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:scaleType="centerCrop"/>
+
+            <ImageButton
+                android:id="@+id/activityImageButton"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_below="@+id/UnspecializedActivityTextView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="0dp"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:src="@drawable/unspecialized_createpost_image"
+                android:scaleType="centerCrop"/>
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:layout_below="@+id/activityImageButton"
+                android:textColor="@color/black"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="50dp"
+                android:textSize="20sp"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"/>
+
+
+            <RelativeLayout
+                android:id="@+id/ActivitySummaryLinearLayout"
+                android:layout_width="370dp"
+                android:layout_height="140dp"
+                android:layout_below="@+id/titleTextView"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_radius_ten_gray">
+
+                <TextView
+                    android:id="@+id/descriptionTextView"
+                    android:layout_width="350dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:autoLink="all"
+                    android:background="@null"
+                    android:gravity="top|left"
+                    android:inputType="textMultiLine|textCapSentences"
+                    android:lines="5"
+                    android:maxLines="5"
+                    android:minLines="1"
+                    android:scrollbars="none"
+                    android:text="Description"
+                    android:textSize="15sp" />
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/noOfParticipantsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No. of Participants: "
+                android:layout_below="@id/ActivitySummaryLinearLayout"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="24dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:id="@+id/noOfParticipantsDigitTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ActivitySummaryLinearLayout"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/noOfParticipantsTextView"
+                android:background="@drawable/bg_radius_ten_gray"
+                android:hint=" " />
+            <TextView
+                android:id="@+id/peopleWhoJoinedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="People who joined: "
+                android:layout_below="@id/noOfParticipantsTextView"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="24dp"
+                android:textColor="@color/black"/>
+
+            <LinearLayout
+                android:layout_width="370dp"
+                android:layout_height="120dp"
+                android:layout_below="@+id/peopleWhoJoinedTextView"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="80dp"
+                android:background="@drawable/bg_radius_ten_gray">
+
+                <ListView
+                    android:id="@+id/participantsListView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="0dp"
+                    android:text="" />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <!--    nav sa ubos-->
     <fragment
