--- a/app/src/main/res/layout/activity_unspecialized_summary.xml
+++ b/app/src/main/res/layout/activity_unspecialized_summary.xml
@@ -11,6 +11,7 @@
         android:src="@drawable/navtop"></ImageView>
 
     <LinearLayout
+        android:id="@+id/navTopLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/navTop"
@@ -46,172 +47,185 @@
             </TextView>
         </LinearLayout>
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/UnspecializedActivityTextView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/navTop"
-        android:layout_marginTop="10dp"
-        android:text="Summary"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"></TextView>
-
-    <ImageButton
-        android:id="@+id/summaryImageButton"
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:layout_below="@+id/UnspecializedActivityTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/unspecialized_createpost_image"
-        android:clickable="false" />
-
-    <RelativeLayout
-        android:id="@+id/ActivitySummaryLinearLayout"
-        android:layout_width="370dp"
-        android:layout_height="250dp"
-        android:layout_below="@+id/summaryImageButton"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_radius_ten_gray">
-
-        <TextView
-            android:id="@+id/ActivityDetails"
-            android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_below="@id/navTopLinearLayout"
+        android:layout_above="@id/navBot"
+        tools:ignore="NotSibling">
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Activity Details:"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:id="@+id/below_details"
-            android:layout_width="370dp"
-            android:layout_height="30dp"
-            android:layout_below="@+id/ActivityDetails"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:background="#ECECEC"
-            android:orientation="horizontal">
-
+            android:layout_below="@+id/navTop">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Title: "
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/titleTextView"
+                android:id="@+id/UnspecializedActivityTextView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
-                android:background="#ECECEC"
-                android:paddingLeft="10dp"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:singleLine="true"
-                android:text=""
-                android:textSize="15sp"></TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/below_details2"
-            android:layout_width="180dp"
-            android:layout_height="30dp"
-            android:layout_below="@+id/below_details"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
-            android:background="#ECECEC"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No. of Participants: "
-                android:textSize="15sp" />
+                android:layout_marginTop="10dp"
+                android:text="Summary"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"></TextView>
 
-            <TextView
-                android:id="@+id/noOfParticipantsTextView"
+            <ImageButton
+                android:id="@+id/summaryImageButton"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:layout_below="@+id/UnspecializedActivityTextView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/unspecialized_createpost_image"
+                android:clickable="false"
+                android:scaleType="centerCrop"/>
+
+            <RelativeLayout
+                android:id="@+id/ActivitySummaryLinearLayout"
+                android:layout_width="370dp"
+                android:layout_height="250dp"
+                android:layout_below="@+id/summaryImageButton"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_radius_ten_gray">
+
+                <TextView
+                    android:id="@+id/ActivityDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Activity Details:"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/below_details"
+                    android:layout_width="370dp"
+                    android:layout_height="30dp"
+                    android:layout_below="@+id/ActivityDetails"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="20dp"
+                    android:background="#ECECEC"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Title: "
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/titleTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="5dp"
+                        android:background="#ECECEC"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
+                        android:singleLine="true"
+                        android:text=""
+                        android:textSize="15sp"
+                        android:textColor="@color/black"></TextView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/below_details2"
+                    android:layout_width="180dp"
+                    android:layout_height="30dp"
+                    android:layout_below="@+id/below_details"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="20dp"
+                    android:background="#ECECEC"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No. of Participants: "
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/noOfParticipantsTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="5dp"
+                        android:background="#ECECEC"
+                        android:inputType="number"
+                        android:maxLength="2"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
+                        android:singleLine="true"
+                        android:text=""
+                        android:textSize="15sp"
+                        android:textColor="@color/black"></TextView>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/activityDescriptionTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/below_details2"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Activity Description:"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    android:textStyle="bold"></TextView>
+
+                <LinearLayout
+                    android:id="@+id/ActivityDescriptionLinearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_below="@+id/activityDescriptionTextView"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="5dp"
+                    android:background="#ECECEC"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/descriptionTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:autoLink="all"
+                        android:background="@null"
+                        android:gravity="top|left"
+                        android:inputType="textMultiLine|textCapSentences"
+                        android:lines="5"
+                        android:maxLines="5"
+                        android:minLines="1"
+                        android:scrollbars="none"
+                        android:text=""
+                        android:textSize="15sp"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+            </RelativeLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
-                android:background="#ECECEC"
-                android:inputType="number"
-                android:maxLength="2"
-                android:paddingLeft="10dp"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:singleLine="true"
-                android:text=""
-                android:textSize="15sp"></TextView>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/activityDescriptionTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/below_details2"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Activity Description:"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold"></TextView>
-
-        <LinearLayout
-            android:id="@+id/ActivityDescriptionLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_below="@+id/activityDescriptionTextView"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="20dp"
-            android:background="#ECECEC"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/descriptionTextView"
-                android:layout_width="310dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:autoLink="all"
-                android:background="@null"
-                android:gravity="top|left"
-                android:inputType="textMultiLine|textCapSentences"
-                android:lines="5"
-                android:maxLines="5"
-                android:minLines="1"
-                android:scrollbars="none"
-                android:text=""
-                android:textSize="15sp" />
-        </LinearLayout>
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/ActivitySummaryLinearLayout"
-        android:gravity="center">
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="80dp"
+                android:layout_below="@+id/ActivitySummaryLinearLayout"
+                android:gravity="center">
 
-        <Button
-            android:id="@+id/postButton"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_continue"
-            android:text="Post"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+                <Button
+                    android:id="@+id/postButton"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_continue"
+                    android:text="Post"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <!--    nav sa ubos-->
     <fragment
