--- a/app/src/main/res/layout/activity_volunteer_campaign_status.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_status.xml
@@ -70,8 +70,8 @@
 
         <ImageView
             android:id="@+id/postedpic"
-            android:layout_width="350dp"
-            android:layout_height="180dp"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
             android:src="@drawable/placeholder_image1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
@@ -99,7 +99,8 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/totalNum"
@@ -123,7 +124,8 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
