ESPINA minor layout adjustments

--- a/app/src/main/res/layout/activity_unspecialized_selection.xml
+++ b/app/src/main/res/layout/activity_unspecialized_selection.xml
@@ -54,8 +54,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/navTop">
-
+        android:layout_below="@id/navTop"
+        android:layout_marginBottom="80dp">
         <ListView
             android:id="@+id/unspecializedActivityListView"
             android:layout_width="match_parent"
