--- a/app/src/main/res/layout/activity_volunteer_campaign_selection_page.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_selection_page.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/navTop"
-            android:layout_above="@id/navBarFragment">
+            android:layout_marginBottom="80dp">
             <ListView
                 android:id="@+id/volunteerCampaignListView"
                 android:layout_width="match_parent"
@@ -62,7 +62,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:clipToPadding="false"
-                tools:listitem="@layout/activity_unspecialized_selection_item"/>
+                tools:listitem="@layout/activity_volunteer_campaign_selection_item"/>
         </RelativeLayout>
 
     <fragment
