ESPINA Campaign Data class optimized, ready for featured opportunities

--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -400,7 +400,8 @@
                 android:layout_marginBottom="5dp"
                 android:inputType="phone"
                 android:elevation="3dp"
-                android:textSize="15sp">
+                android:textSize="15sp"
+                android:maxLength="11">
             </EditText>
 
         </LinearLayout>
