OPORTO edit profile page layout oks

--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -160,7 +160,7 @@
 
 
 
-<!--    nav sa ubos-->
+<!--    nav bottom-->
     <fragment
         android:id="@+id/navBarFragment"
         android:name="com.intprog.helpinghands.NavBarFragment"
